// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MR Popover loaded state matches the snapshot 1`] = `
<gl-popover-stub
  boundary="viewport"
  cssclasses=""
  placement="top"
  show=""
  target=""
>
  <div
    class="mr-popover"
  >
    <div
      class="d-flex align-items-center justify-content-between"
    >
      <div
        class="d-inline-flex align-items-center"
      >
        <gl-badge-stub
          class="gl-mr-3"
          size="md"
          variant="success"
        >
          
          Open
        
        </gl-badge-stub>
         
        <span
          class="gl-text-secondary"
        >
          Opened 
          <time>
            just now
          </time>
        </span>
      </div>
       
      <ci-icon-stub
        cssclasses=""
        size="16"
        status="[object Object]"
      />
    </div>
     
    <h5
      class="my-2"
    >
      Updated Title
    </h5>
     
    <div
      class="gl-text-secondary"
    >
      
      foo/bar!1
    
    </div>
  </div>
</gl-popover-stub>
`;

exports[`MR Popover shows skeleton-loader while apollo is loading 1`] = `
<gl-popover-stub
  boundary="viewport"
  cssclasses=""
  placement="top"
  show=""
  target=""
>
  <div
    class="mr-popover"
  >
    <div>
      <gl-skeleton-loading-stub
        class="animation-container-small mt-1"
        lines="1"
      />
    </div>
     
    <!---->
     
    <div
      class="gl-text-secondary"
    >
      
      foo/bar!1
    
    </div>
  </div>
</gl-popover-stub>
`;
